infrastructure/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    pod-security.kubernetes.io/enforce: baseline
  annotations:
    argocd.argoproj.io/sync-wave: "0"
